--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,22 @@ version: "3.8"
 services:
   backend-flask:
     environment:
-      FRONTEND_URL: "https://3000-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      FRONTEND_URL: ${FRONTEND_URL}
+      BACKEND_URL: ${BACKEND_URL}
     build: ./backend-flask
     ports:
       - "4567:4567"
     volumes:
       - ./backend-flask:/backend-flask
     healthcheck:
-      test: ["CMD", "curl", "-f", "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:4567/health"]
       interval: 20s
       timeout: 5s
       retries: 3
   frontend-react-js:
-    environment:
-      REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
     build: ./frontend-react-js
+    environment:
+      REACT_APP_BACKEND_URL: ${REACT_APP_BACKEND_URL}
     ports:
       - "3000:3000"
     volumes:
@@ -25,9 +25,6 @@ services:
     depends_on:
       backend-flask: 
         condition: service_healthy
-
-# the name flag is a hack to change the default prepend folder
-# name when outputting the image names
 networks: 
   internal-network:
     driver: bridge
