--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,10 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
       sudo apt install -y postgresql-client-13 libpq-dev
+  - name: hadolint
+    init: |
+      sudo wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64
+      sudo chmod +x /bin/hadolint
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
