Week1 - Updated Dockerfile for both frontend & backend

--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -1,13 +1,28 @@
-FROM python:3.10-slim-buster
+# Build stage
+FROM python:3.10-slim-buster AS build
 
-RUN apt-get update && apt-get install -y curl
+WORKDIR /app
 
-WORKDIR /backend-flask
-
-COPY requirements.txt requirements.txt
-RUN pip3 install -r requirements.txt
+COPY requirements.txt .
+RUN pip3 install --prefix=/install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+# Development stage
+FROM python:3.10-slim-buster
+
+RUN apt-get update && apt-get install --no-install-recommends -y curl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create a non-root user to run the container
+RUN adduser --disabled-password --gecos '' appuser
+USER appuser
+
+WORKDIR /app
+
+COPY --from=build /install /usr/local
+COPY --from=build /app .
 
 ENV FLASK_ENV=development
 
