--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,8 +3,8 @@ version: "3.8"
 services:
   backend-flask:
     environment:
-      FRONTEND_URL: "https://3000-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      FRONTEND_URL: "http://localhost:3000"
+      BACKEND_URL: "http://localhost:4567"
     build: ./backend-flask
     ports:
       - "4567:4567"
@@ -18,7 +18,7 @@ services:
   frontend-react-js:
     build: ./frontend-react-js
     environment:
-      REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      REACT_APP_BACKEND_URL: "http://localhost:4567"
     ports:
       - "3000:3000"
     volumes:
