--- a/frontend-react-js/Dockerfile
+++ b/frontend-react-js/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:16.19.1-alpine AS builder
 
-RUN mkdir -p /app && chown -R node:node /app
+RUN mkdir -p /frontend-react-js/node_modules && chown -R node:node /frontend-react-js
 
-WORKDIR /app
+WORKDIR /frontend-react-js
 
 # Set necessary environment variables needed for our image
 ENV PORT=3000
@@ -16,9 +16,12 @@ RUN npm install
 
 FROM node:16.19.1-alpine
 
-WORKDIR /app
+# Change user to node
+USER node
 
-COPY --from=builder /app/node_modules ./node_modules
+WORKDIR /frontend-react-js
+
+COPY --from=builder --chown=node:node /frontend-react-js/node_modules ./node_modules
 COPY --chown=node:node . .
 
 EXPOSE ${PORT}
